<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tambah_pertemuan_title"
        android:id="@+id/tv_title_tambah_pertemuan"
        android:textSize="@dimen/size_title"
        android:textColor="@color/birutuaIF"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_judul_pertemuan"
        android:text="@string/tv_judul_pertemuan"
        android:textSize="@dimen/size_form"
        android:layout_below="@+id/tv_title_tambah_pertemuan"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_tambah_pertemuan"
        android:layout_below="@id/tv_judul_pertemuan"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_jadwal_pertemuan"
        android:text="@string/tv_jadwal_pertemuan"
        android:textSize="@dimen/size_form"
        android:layout_below="@+id/et_tambah_pertemuan"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_jadwal_tgl_pertemuan"
        android:layout_below="@id/tv_jadwal_pertemuan"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_jadwal_time_pertemuan"
        android:layout_below="@id/et_jadwal_tgl_pertemuan"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_partisipan_pertemuan"
        android:text="@string/tv_partisipan_pertemuan"
        android:textSize="@dimen/size_form"
        android:layout_below="@+id/et_jadwal_time_pertemuan"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_partisipan_pertemuan"
        android:layout_below="@id/et_jadwal_time_pertemuan"
        android:layout_toRightOf="@id/tv_partisipan_pertemuan"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_jadwal_dosen"
        android:backgroundTint="@color/biruIF"
        android:text="@string/btn_jadwal_dosen_pertemuan"
        android:layout_below="@id/et_partisipan_pertemuan"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_deskripsi_pertemuan"
        android:text="@string/tv_deskripsi_pertemuan"
        android:textSize="@dimen/size_form"
        android:layout_below="@+id/btn_jadwal_dosen"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/et_deskripsi_pertemuan"
        android:layout_below="@id/tv_deskripsi_pertemuan"
        android:layout_above="@+id/btn_simpan_pertemuan"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_simpan_pertemuan"
        android:backgroundTint="@color/biruIF"
        android:text="@string/btn_simpan_pertemuan"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>