<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_tambah_matkul_title"
        android:id="@+id/tv_title_tambah_matkul"
        android:textSize="@dimen/size_title"
        android:textColor="@color/birutuaIF"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_smt_ambil"
        android:layout_below="@+id/tv_title_tambah_matkul"/>

    <Spinner
        android:id="@+id/spinner_matkul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_smt_ambil"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_tambah_matkul_prasyarat"
        android:textSize="@dimen/size_title"
        android:layout_below="@id/spinner_matkul"
        android:textColor="@color/birutuaIF"
        android:id="@+id/tv_prasyarat"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lst_prasyarat"
        android:layout_below="@+id/tv_prasyarat"
        android:layout_above="@id/btn_ambil"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/biruIF"
        android:textColor="@color/birutuaIF"
        android:text="@string/fragment_tambah_matkul_btn_ambil"
        android:id="@+id/btn_ambil"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>